--- a/index.html
+++ b/index.html
@@ -1,15 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scanner</title>
     <script src="./node_modules/html5-qrcode/html5-qrcode.min.js"></script>
-</head>
-<body>
-    <div id="result"></div>
-</body>
-<script>
-    console.log(Html5QrcodeScanner);
-</script>
+    <style>
+      #reader {
+        width: 600px;
+      }
+      .hidden {
+        visibility: hidden;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="reader"></div>
+    <div id="resultDiv">
+      <div id="res"></div>
+      <button id="reScan" class="hidden">Scan again</button>
+    </div>
+  </body>
+  <script>
+    const resultDiv = document.getElementById("resultDiv");
+    const res = document.getElementById("res");
+    const reScan = document.getElementById("reScan");
+    let scanner = null;
+
+    startScanning();
+
+    reScan.addEventListener("click", ()=>{
+        reScan.classList.add("hidden");
+        res.innerText = "";
+        startScanning();
+    });
+
+    function startScanning() {
+      scanner = new Html5QrcodeScanner("reader", {
+        qrbox: {
+          width: 250,
+          height: 250,
+        },
+        fps: 20,
+      });
+      scanner.render(success, error);
+    }
+
+    function success(result) {
+      res.innerText = result;
+      scanner.clear();
+      document.getElementById("reader").innerHTML = "";
+      reScan.classList.remove("hidden");
+    }
+
+    function error(err) {
+      console.error(err);
+    }
+  </script>
 </html>
