--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scanner</title>
-   
-
     <style>
+        body{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
       #reader {
-        width: 600px;
+        width: 80vw;
+        max-width: 600px;
       }
       .hidden {
         visibility: hidden;
